--- a/asset/sass/style.scss
+++ b/asset/sass/style.scss
@@ -40,7 +40,12 @@ a{
 .show_mobile,.show_sm{
     display: none !important;
 }
-
+.pst{
+    position: static !important;
+}
+.psr{
+    position: relative !important;
+}
 
 
 /*------------------------
@@ -55,118 +60,451 @@ main code start here
 }
 
 /*-- start header area --*/
-#main_header{
-    padding: 15px 0px;
-    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
-    position: relative;
-    z-index: 999999999;
-    .main_header_toggle{
-        span{
-            cursor: pointer;
-        }
-    }
-    .logo{
-        a{
-            img{
-                height: 19px;
+#mainHeaderTop{
+    .menuHeader{
+        padding-left: 20px;
+        .nav{
+            ul{
+                li{
+                    display: inline-block;
+                    a{
+                        font-family: gc;
+                        font-size: 15px;
+                        color: #6997A1;
+                        margin-right: 25px;
+                        display: block;
+                        padding: 25px 0px 28px 0px;
+                        i{
+                            margin-left: 6px;
+                            transition: 0.4s;
+                        }
+                    }
+                    // this is staert mega menu part
+                    .megaMenuTop{
+                        position: absolute;
+                        top: 120%;
+                        left: 0;
+                        width: 100%;
+                        background: #DCFAFF;
+                        z-index: 9999999999999999;
+                        transition: 0.4s;
+                        opacity: 0;
+                        visibility: hidden;
+                        .megaMenuTopItem{
+                            a{
+                                display: block;
+                                position: relative;
+                                img{
+                                    transition: 0.4s;
+                                }
+                                h4{
+                                    font-family: gc;
+                                    font-size: 14px;
+                                    color: #264C55;
+                                    margin-top: 5px;
+                                }
+                                .hoverImage{
+                                    position: absolute;
+                                    top: 39.5%;
+                                    transform: translateY(-50%);
+                                    left: 0;
+                                    right: 0;
+                                    margin: auto;
+                                    opacity: 0;
+                                }
+                                &:hover{
+                                   >img{
+                                    opacity: 0;
+                                   }
+                                   img.hoverImage{
+                                    opacity: 1;
+                                   }
+                                }
+                                .subMegaMenuItem{
+                                    position: absolute;
+                                    width: 100%;
+                                    left: 0;
+                                    top: 100%;
+                                    padding: 20px 0px;
+                                    z-index: 99999999;
+                                    opacity: 0;
+                                    visibility: hidden;
+                                    transition: 0.4s;
+                                    p{
+                                        font-size: 14px;
+                                        font-weight: 500;
+                                        color: #264C55;
+                                        text-align: left;
+                                        width: 97%;
+                                        line-height: 25px;
+                                    }
+                                    img{
+                                        position: absolute;
+                                        right: -16px;
+                                        top: -18px;
+                                    }
+                                }
+                                &:hover{
+                                    .subMegaMenuItem{
+                                        opacity: 1;
+                                        visibility: visible;
+                                    }
+                                }
+                            }
+                        }
+                        .subMegaMenu{
+                            position: absolute;
+                            top: 100%;
+                            left: 0;
+                            width: 100%;
+                            height: 150px;
+                            background: #dcfaffc2;
+                            padding: 20px;
+                            opacity: 0;
+                            visibility: hidden;
+                            transition: 0.5s;
+                        }
+                    }
+                    .megaMenuTop2 .container {
+                        padding: 0px 150px;
+                        .subMegaMenuItem{
+                            img{
+                                position: absolute;
+                                left: -60px;
+                                top: -15px;
+                            }
+                        }
+                    }
+                    .megaMenuTop3 .container {
+                        padding: 0px 250px;
+                        .subMegaMenuItem{
+                            img{
+                                position: absolute;
+                                left: -60px;
+                                top: -15px;
+                            }
+                        }
+                    }
+                    &:hover{
+                        i{
+                            transform: rotate(180deg);
+                        }
+                        >a{
+                            color: #264C55;
+                        }
+                        .megaMenuTop{
+                            opacity: 1;
+                            visibility: visible;
+                            top: 100%;
+                        }
+                    }
+                }
             }
         }
     }
-    .menu{
-        ul{
+    .mainHeaderTopRight{
+        .awardIcon{
             li{
+                list-style: none;
+                position: relative;
+                .infoTooltip{
+                    position: absolute;
+                    top: 130%;
+                    left: -15px;
+                    width: 140px;
+                    background: #fff;
+                    border: 1px solid #AACBD2;
+                    z-index: 9999999999999;
+                    text-align: center;
+                    border-radius: 30px;
+                    transition: 0.4s;
+                    opacity: 0;
+                    visibility: hidden;
+                    h5{
+                        font-family: gc;
+                        font-size: 14px;
+                        color: #264C55;
+                        padding: 7px 0px 12px 0px;
+                    }
+                }
+                &:hover{
+                    .infoTooltip{
+                        top: 120%;
+                        opacity: 1;
+                        visibility: visible;
+                    }
+                }
+            }
+        }
+       .beforeLogin{
+            a{
                 display: inline-block;
-                a{
-                    font-family: gc;
-                    font-size: 14px;
-                    display: inline-block;
-                    margin-left: 35px;
-                    &:hover{
-                        color: $mainColor;
-                    }
+                background: transparent;
+                border: 1px solid #333333;
+                font-family: gc;
+                font-size: 15px;
+                padding: 10px 40px;
+                border-radius: 30px;
+                box-shadow: 0px 0px 4px rgba(0,0,0,0.2);
+                &:hover{
+                    background: $mainColor;
+                    border-color: $mainColor;
+                    color: #fff;
                 }
             }
-            .btn_sp_1{
-                a{
-                    border: 2px solid $titleColor;
-                    padding: 7px 40px 13px 40px;
-                    display: inline-block;
-                    border-radius: 30px;
+        } 
+        .afterLogin{
+            padding-left: 20px;
+            ul{
+                display: flex;
+                justify-content: space-between;
+                li{
+                    position: relative;
+                    .infoTooltip{
+                        position: absolute;
+                        top: 130%;
+                        left: -30px;
+                        width: 110px;
+                        background: #fff;
+                        border: 1px solid #AACBD2;
+                        z-index: 9999999999999;
+                        text-align: center;
+                        border-radius: 30px;
+                        transition: 0.4s;
+                        opacity: 0;
+                        visibility: hidden;
+                        h5{
+                            font-family: gc;
+                            font-size: 14px;
+                            color: #264C55;
+                            padding: 7px 0px 12px 0px;
+                        }
+                    }
+                    a{
+                        display: block;
+                    }
                     &:hover{
-                        background: $mainColor;
-                        color: #fff;
-                        border-color: $mainColor;
-                        box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-                        transform: translateY(-2px);
-                    }
-                }
-            }
-            .btn_sp_2{
-                a{
-                    border: 2px solid $titleColor;
-                    width: 150px;
-                    border-radius: 30px;
-                    padding: 1px 0px 1px 3px;
-                    text-align: left;
-                    img{
-                        margin-right: 7px;
-                    }
-                    span{
-                        position: relative;
-                        top: 1px;
-                    }
-                    &:hover{
-                        background: $mainColor;
-                        color: #fff;
-                        border-color: $mainColor;
-                        box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+                        .infoTooltip{
+                            top: 120%;
+                            opacity: 1;
+                            visibility: visible;
+                        }
                     }
                 }
             }
         }
     }
+    
 }
 
-#main_header.fix {
-    position: fixed;
+
+#mainHeaderTop.fix {
+    position: fixed !important;
     top: 0;
     left: 0;
     width: 100%;
     background: #fff;
+    z-index: 999999999999;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+    
 }
 
-// this is for mobile header
-#mobile_header{
+
+#mobileMenuTop{
     padding: 15px 0px;
     background: #fff;
-    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
     position: relative;
-    z-index: 999999999999;
-    .mobile_header_right{
+    z-index: 9999999999999999;
+    .logo{
+        margin-left: 10px;
+    }
+    .mobileMenuTopRight{
         ul{
             li{
                 display: inline-block;
-                cursor: pointer;
+                span.mobileToggle{
+                    cursor: pointer;
+                    font-size: 24px;
+                    color: #CBD8DB;
+                }
                 a{
-                    border: 1px solid $titleColor;
-                    display: block;
-                    padding: 6px 25px 10px 25px;
                     font-family: gc;
                     font-size: 13px;
+                    color: #333333;
+                    border: 1px solid #333333;
                     border-radius: 30px;
+                    padding: 6px 25px;
                     margin-right: 15px;
+                    display: block
+                }
+                a.afaterLogin{
+                    border: none;
+                    padding: 0px;
+                    img{
+                        position: relative;
+                        top: -6px;
+                    }
                 }
             }
         }
     }
 }
-#mobile_header.fix {
+
+#mobileMenuTop.fix{
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 999;
     width: 100%;
-    background: #fff;
 }
+
+
+#sidebarMenu{
+    position: fixed;
+    top: 0px;
+    left: -100%;
+    width: 0%;
+    height: 100%;
+    background: #fff;
+    z-index: 9999999999999999;
+    overflow-x: scroll;
+    padding-bottom: 100px;
+    transition: 0.5s;
+    opacity: 0;
+    .mobile_menu_info{
+        padding: 15px 0px;
+    background: #fff;
+    position: relative;
+    z-index: 9999999999999999;
+    .logo{
+        margin-left: 10px;
+    }
+    .mobileMenuTopRight{
+        ul{
+            li{
+                display: inline-block;
+                span.mobileToggle{
+                    cursor: pointer;
+                    font-size: 24px;
+                    color: #CBD8DB;
+                }
+                a{
+                    font-family: gc;
+                    font-size: 13px;
+                    color: #333333;
+                    border: 1px solid #333333;
+                    border-radius: 30px;
+                    padding: 6px 25px;
+                    margin-right: 15px;
+                    display: block
+                }
+                a.afaterLogin{
+                    border: none;
+                    padding: 0px;
+                    img{
+                        position: relative;
+                        top: -6px;
+                    }
+                }
+            }
+        }
+    }
+    }
+    .menu_top{
+        padding: 0px 20px;
+        position: relative;
+        padding-bottom: 25px;
+        padding-top: 25px;
+        &:after{
+            position: absolute;
+            height: 1px;
+            width: 89%;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            content: "";
+            background: #cbd8db66;
+        }
+        ul{
+            li{
+                display: block;
+                margin-bottom: 20px;
+                a{
+                    span{
+                        min-width: 35px;
+                        display: inline-block;
+                    }
+                    .img_1{
+                        position: relative;
+                        top: -2px
+                    }
+                    font-family: gc;
+                    font-size: 15px;
+                    color: #37575E;
+                }
+            }
+        }
+    }
+    .menu_bottom{
+        padding: 0px 20px;
+        padding-top: 85px;
+        position: relative;
+        padding-top: 25px;
+        ul{
+            li{
+                display: block;
+                margin-bottom: 25px;
+                a{
+                    span{
+                        min-width: 35px;
+                        display: inline-block;
+                    }
+                    .img_1{
+                        position: relative;
+                        top: -2px
+                    }
+                    font-family: gc;
+                    font-size: 15px;
+                    color: #37575E;
+                }
+            }
+        }
+    }
+}
+#sidebarMenu::-webkit-scrollbar{
+    display: none;
+}
+#sidebarMenu::-moz-scrollbar{
+    display: none;
+}
+#sidebarMenu::-o-scrollbar{
+    display: none;
+}
+#sidebarMenu::-ms-scrollbar{
+    display: none;
+}
+#sidebarMenu.show{
+    width: 100%;
+    left: 0;
+    opacity: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
