--- a/asset/sass/style.scss
+++ b/asset/sass/style.scss
@@ -935,6 +935,15 @@ main code start here
     visibility: visible;
 }
 
+// form error messge
+.errorForm{
+    font-weight: 500;
+    font-size: 12px;
+    color: $mainColor;
+    font-style: italic;
+    margin-top: 8px;
+}
+
 // this is for otp popup
 #otp_popup{
     position: fixed;
