--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -343,6 +343,34 @@ main code start here
         #sidebarMenu .mobile_menu_info .mobileMenuTopRight ul li a.afaterLogin img {
           position: relative;
           top: -6px; }
+  #sidebarMenu .menu_after_signIn {
+    padding: 0px 20px;
+    position: relative;
+    padding-bottom: 25px;
+    padding-top: 25px; }
+    #sidebarMenu .menu_after_signIn:after {
+      position: absolute;
+      height: 1px;
+      width: 89%;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      content: "";
+      background: #cbd8db66; }
+    #sidebarMenu .menu_after_signIn ul li {
+      display: block;
+      margin-bottom: 25px; }
+      #sidebarMenu .menu_after_signIn ul li a {
+        font-family: gc;
+        font-size: 14px;
+        color: #37575E; }
+        #sidebarMenu .menu_after_signIn ul li a span {
+          min-width: 35px;
+          display: inline-block; }
+        #sidebarMenu .menu_after_signIn ul li a .img_1 {
+          position: relative;
+          top: -2px; }
   #sidebarMenu .menu_top {
     padding: 0px 20px;
     position: relative;
@@ -363,7 +391,7 @@ main code start here
       margin-bottom: 20px; }
       #sidebarMenu .menu_top ul li a {
         font-family: gc;
-        font-size: 15px;
+        font-size: 14px;
         color: #37575E; }
         #sidebarMenu .menu_top ul li a span {
           min-width: 35px;
@@ -381,7 +409,7 @@ main code start here
       margin-bottom: 25px; }
       #sidebarMenu .menu_bottom ul li a {
         font-family: gc;
-        font-size: 15px;
+        font-size: 14px;
         color: #37575E; }
         #sidebarMenu .menu_bottom ul li a span {
           min-width: 35px;
