Image responsive all page
Make Image Size responsive according to screen size( Attaching Screenshot)

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -73,6 +73,9 @@ a {
 .psr {
   position: relative !important; }
 
+.img_res {
+  width: 100% !important; }
+
 /*------------------------
 main code start here 
 -------------------------*/
