--- a/asset/sass/style.scss
+++ b/asset/sass/style.scss
@@ -47,6 +47,10 @@ a{
     position: relative !important;
 }
 
+// this css for image responsive 
+.img_res{
+    width: 100% !important;
+}
 
 /*------------------------
 main code start here 
