--- a/asset/sass/style.scss
+++ b/asset/sass/style.scss
@@ -2161,6 +2161,9 @@ main code start here
                     width: 25px;
                     opacity: 1;
                 }
+                h3{
+                    color: $mainColor;
+                }
             }
         }
     }
